# src/app/authentication/docs/swagger.yaml
@@ -34,6 +34,28 @@ definitions:
     - phoneNumber
     - username
     type: object
+  models.BFFSigninUserRequest:
+    properties:
+      password:
+        example: Secure@123
+        maxLength: 20
+        minLength: 8
+        type: string
+      username:
+        example: Arijit
+        maxLength: 32
+        minLength: 5
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  models.BFFSigninUserResponse:
+    properties:
+      message:
+        example: user logged in successfully
+        type: string
+    type: object
   models.ErrorAPIResponse:
     properties:
       error:
@@ -51,6 +73,36 @@ definitions:
 info:
   contact: {}
 paths:
+  /api/auth/signin:
+    post:
+      consumes:
+      - application/json
+      description: Authenticate user and return JWT tokens
+      parameters:
+      - description: Signin Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.BFFSigninUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.BFFSigninUserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+      summary: Sign in user
+      tags:
+      - User
   /api/auth/signup:
     post:
       consumes:
